# ccxt-easy-dl

./: .gitignore  README.md  pyproject.toml
src/ccxt_easy_dl/: __init__.py  downloader.py
tests/: test_downloader.py
